# claude-code-setup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_claude_code.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: pr-code-reviewer.md
.claude/skills/feedback-to-linear/: SKILL.md
.claude/skills/feedback-to-linear/references/: ai-parsing-guidelines.md
config/: plugins.json  plugins.json.backup.2026-01-09T15-18-50  settings.json.backup.2026-01-09T09-36-49  settings.json.backup.2026-01-09T15-18-50  settings.json.backup.2026-01-09T15-22-50  settings.json.backup.2026-01-09T15-44-47  settings.json.backup.2026-01-09T20-33-51  settings.json.backup.2026-01-09T20-40-15
tests/: conftest.py  test_command.py  test_config_loading.py  test_console.py  test_diff.py  test_exit_codes.py  test_export.py  test_file_operations.py  test_main.py  test_plugins.py  test_settings.py  test_skills.py
